--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="stylesheets/index.css">
 </head>
 <body>
-    <h1>Welcome to Trivia!</h1>
-    <h2>Enter your name:</h2>
-    <div class='bgimg-page-wrapper' id = 'pgwrapper'>
+    <h1 id="page-title">Welcome to Trivia!</h1>
+    <h2 id="subtitle">Enter your name:</h2>
+    <div class='name-form' id = 'name-form'>
         <input type="text" id="user-name"><br/><br>
         <button id="start-trivia">Start Trivia!</button>
           <div id="quiz">
