changes the page formating after clicking the start button

--- a/index.html
+++ b/index.html
@@ -15,8 +15,14 @@
         <button id="start-trivia">Start Trivia!</button>
           <div id="quiz">
           </div>  
-    <div id="list">
-        <ul id="questions-list"></ul>
+    <div id="question-container" class="hide">
+        <div id="question"></div>
+        <div id="answers">
+            <button class="btn"></button>
+            <button class="btn"></button>
+            <button class="btn"></button>
+            <button class="btn"></button>
+        </div>
     </div>
     <script src="javascripts/index.js"></script>
    
