adds questions buttons to html

--- a/index.html
+++ b/index.html
@@ -15,13 +15,17 @@
         <button id="start-trivia">Start Trivia!</button>
           <div id="quiz">
           </div>  
+        </div>
     <div id="question-container" class="hide">
-        <div id="question"></div>
+        <div id="question">Qeustion TEST</div>
         <div id="answers">
-            <button class="btn"></button>
-            <button class="btn"></button>
-            <button class="btn"></button>
-            <button class="btn"></button>
+            <button class="btn">TEST 1</button>
+            <button class="btn">TEST 1</button>
+            <button class="btn">TEST 1</button>
+            <button class="btn">TEST 1</button>
+        </div>
+        <div id="next-button">
+            <button id="next" >Next TEST</button>
         </div>
     </div>
     <script src="javascripts/index.js"></script>
