cleans the code and shows question on the page

--- a/index.html
+++ b/index.html
@@ -12,19 +12,22 @@
     <h2 id="subtitle">Enter your name:</h2>
     <div class='name-form' id = 'name-form'>
         <input type="text" id="user-name"><br/><br>
-        <button id="start-trivia">Start Trivia!</button>
+        <button id="start-trivia">Submit</button>
           <div id="quiz">
           </div>  
         </div>
-    <div id="question-container" class="hide">
-        <div id="question">Qeustion TEST</div>
-        <div id="answers">
+    <div id="question-container" >
+        <div id="question" class="hide">Qeustion TEST</div>
+        <div id="answers" class="hide">
             <button class="btn">TEST 1</button>
             <button class="btn">TEST 1</button>
             <button class="btn">TEST 1</button>
             <button class="btn">TEST 1</button>
         </div>
-        <div id="next-button">
+        <div id="start-button" class="hide">
+            <button id="start">Start</button>
+        </div>
+        <div id="next-button" class="hide">
             <button id="next" >Next TEST</button>
         </div>
     </div>
