adds more Api.js files

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="stylesheets/index.css">
 </head>
 <body>
-    <div class="welcome">
+    <div id="welcome" class=''>
         <h1 id="page-title">Welcome to Trivia!</h1><br>
         
         <h2 id="subtitle">Please enter your name:</h2>
