formats how question is displayed

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="stylesheets/index.css">
 </head>
 <body>
-    <div id="welcome" class=''>
+    <div id="welcome" class='welcome'>
+        
         <h1 id="page-title">Welcome to Trivia!</h1><br>
         
         <h2 id="subtitle">Please enter your name:</h2>
@@ -41,6 +42,7 @@
 
     <script src="javascripts/index.js"></script>
     <script src="javascripts/services/answerApi.js"></script>
-   
+    <script src="javascripts/services/userApi.js"></script>
+    <script src="javascripts/user.js"></script>
 </body>
 </html>
