uses frontend data to go through questions

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <script src="javascripts/services/quizApi.js"></script>
     <script src="javascripts/user.js"></script>
     <script src="javascripts/quiz.js"></script>
+    <script src="javascripts/answer.js"></script>
     <script src="javascripts/question.js"></script>
     <script src="javascripts/services/questionApi.js"></script>
     <script src="node_modules/confetti-js/dist/index.min.js"></script>
